--- a/search-and-go-child/sass/partials/_media.scss
+++ b/search-and-go-child/sass/partials/_media.scss
@@ -5,6 +5,13 @@
 		width: 49%;
 	}
 }
+
+@media (max-width: 768px) { //vertical tablet
+	.eltd-top-bar .eltd-position-right .eltd-top-bar-widget {
+		margin-left: 0px; //stops top right menu from wrapping
+	}
+}
+
 @media only screen and (max-width: 600px) {// point at which top bar hides
 	.ecc-mobile-only,
 	// show phone nubmer at top (inplace of top bar)
